# tdxtrader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
tdxtrader/: __init__.py  file.py  index.py  logger.py  order.py  trader.py  utils.py
