[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tdxtrader"
version = "0.1.1"
authors = [{name = "myc", email = "mayuanchi1029@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "xtquant"
]

[project.urls]
Home = "https://github.com/zsrl/tdxtrader"
